--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "polymer": "polymer/polymer#~0.5.5",
-    "google-youtube": "GoogleWebComponents/google-youtube#~1.0.6"
+    "google-youtube": "GoogleWebComponents/google-youtube#~1.0.6",
+    "voice-elements": "~0.2.0",
+    "core-overlay": "polymer/core-overlay#~0.5.5"
   }
 }
