--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "voice-elements": "~0.2.0",
     "core-overlay": "polymer/core-overlay#~0.5.5",
     "core-style": "polymer/core-style#~0.5.5",
-    "blueimp-md5": "blueimp/JavaScript-MD5#~1.1.0"
+    "blueimp-md5": "blueimp/JavaScript-MD5#~1.1.0",
+    "core-ajax": "polymer/core-ajax#~0.5.5"
   }
 }
